crates/sith_python_parser/src/parser/tests/snapshots/python_parser__parser__tests__context__tests__del_subscript.snap
---
source: crates/sith_python_parser/src/parser/tests/context.rs
expression: parse_ast
---
(
    [
        Delete(
            DeleteStmt {
                range: 0..8,
                targets: [
                    Subscript(
                        SubscriptExpr {
                            range: 4..8,
                            value: Name(
                                NameExpr {
                                    range: 4..5,
                                    id: "x",
                                    ctx: Load,
                                },
                            ),
                            slice: Name(
                                NameExpr {
                                    range: 6..7,
                                    id: "y",
                                    ctx: Load,
                                },
                            ),
                            ctx: Del,
                        },
                    ),
                ],
            },
        ),
    ],
    [],
)
